<resources>
    <string name="app_name">Learn Ladder</string>
    <string name="znau">Знаю</string>
    <string name="ne_znau">Не знаю</string>
    <string name="counter">0/0</string>
    <string name="stresses"> Ударения </string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="allcardsviewed">Все карточки просмотрены. Начать заново?</string>
    <string name="progress">Прогресс</string>
    <string name="exit">Выход</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="loading">загрузка</string>
    <string name="welcome">Добро пожаловать! Learn Ladder - Ваш помощник при подготовке к ЕГЭ по русскому языку.\n\nВойдите или зарегестрируйтесь</string>
    <string name="registration">Регистрация</string>
    <string name="enter">Вход</string>
    <string name="result">100%</string>
    <string name="email">Введите Email</string>
    <string name="password">Введите Пароль</string>
    <string name="slovarnie_slova"> Словарные слова </string>
    <string name="studying">Обучение</string>
    <string name="practice">Практика</string>
    <string name="your_progress">Ваш прогресс</string>
    <string name="words">Непроверяемые слова</string>
    <string name="trops">Средства выразительности</string>
    <string name="banti">банты</string>
    <string name="help">Время телевизору мы отдадим, на диван приляжем и его включим.</string>
    <string name="ans1">Ответ1</string>
    <string name="ans2">Ответ2</string>
    <string name="ans3">Ответ3</string>
    <string name="ans4">Ответ4</string>
    <string name="cards">КАРТОЧКИ</string>
    <string name="roots">Корни</string>
    <string name="prefixes">Приставки</string>
    <string name="title">Заголовок</string>
    <string name="main">Правила</string>
    <string name="theory">ТЕОРИЯ</string>
    <string name="verbs">Правописание глаголов\nи причастий</string>
    <string name="qiuestiom">Вопрос</string>
    <string name="achievements">Достижения</string>
    <string name="hello">Здравствуйте, Имя!\nЧто будем изучать?</string>
    <string name="class_dont_exists">Ты не прикреплён к своему классу:(</string>
    <string name="your_class">Твой класс:</string>
    <string name="your_name">Ваше имя:</string>
    <string name="your_surname">Ваша фамилия:</string>
</resources>